# grpc_orchestrator

./: .gitignore  ARCHITETTURA_REFACTORED.md  CHANGELOG_TIME_MEASUREMENT.md  CMakeLists.txt  DIAGRAMMA_FLUSSO_DETTAGLIATO.md  DOCKER.md  DOCKER_GUIDE.md  Dockerfile.orchestrator  Dockerfile.task  GUIDA_COMPLETA.md  Makefile.deploy  QUICK_START_REFACTORED.md  README.md  README_RT_TESTING.md  REALISTIC_TASKS.md  SCHEMA_SISTEMA.md  SEQUENTIAL_EXECUTION.md  SIMPLIFICATION_SUMMARY.md  TASK_ARCHITECTURE.md  TASK_DOCUMENTATION.md  build-deploy-manager.sh  deploy_manager_main  docker-build.sh  docker-compose.yml  docker-helper.sh  docker-run.sh  docker-stop.sh  docker-verify-rt.sh  run_demo.sh  run_native_rt.sh  setup-gitlab.sh  test_rt_priority.sh
appunti/: ARCHITECTURE_SEQUENCE_DIAGRAM.md  CHANGELOG_RT_FEATURES.md  CUSTOM_OUTPUT.md  DOCKER_LOCK_MEMORY.md  DSL_FIELD_MAPPING.md  DSL_GUIDE.md  DSL_SUMMARY.md  FIX_CONCURRENT_TASKS.md  FIX_RACE_CONDITION.md  FIX_SEGFAULT.md  FIX_TIMING.md  GENERIC_ARCHITECTURE_DIAGRAMS.md  INSTALL.md  MODALITA_IBRIDA.md  QUICKSTART.md  QUICKSTART_RT.md  README.md  REALTIME.md  REALTIME_CONFIG.md  RT_PRIORITY_TESTING.md  RT_TEST_RESULTS.md  SCHEMA_GENERALE.md  SEQUENTIAL_MODE.md  SYSTEM_ARCHITECTURE.md  TASK_WRAPPER_SCHEMA copy.md  UML_DIAGRAMS.md  VERIFICA_REALTIME.md
deploy/: .gitlab-ci.yml.example  README.md  builder_config.yaml.backup  deployment_config.yaml  deployment_config.yaml.backup
docs/: CONTEXT_SWITCH_MEASUREMENT.md  DEVELOPER_GUIDE.md  TIME_MEASUREMENT.md  USER_GUIDE.md
examples/: builder_manager_main.cpp  deploy_manager_main.cpp  orchestrator_main.cpp  task1_data_analyzer.cpp  task2_image_processor.cpp  task3_report_generator.cpp  task_main.cpp
include/: builder_manager.h  deploy_manager.h  orchestrator.h  rt_utils.h  schedule.h  task_wrapper.h
old_sh/: build.sh  docker-build.sh  docker-logs.sh  docker-run.sh  run_docker.sh
proto/: orchestrator.proto
schedules/: example_hybrid.yaml  example_parametrized.yaml  example_parametrized_rt.yaml  example_rt_priority_test.yaml  example_sequential.yaml  example_timed.yaml  template_full.yaml
schedules copy/: README.md  example_hybrid.yaml  example_sequential.yaml  example_timed.yaml  template_full.yaml
src/: builder_manager.cpp  deploy_manager.cpp  orchestrator.cpp  orchestrator_sequential.cpp  rt_utils.cpp  schedule.cpp  task_wrapper.cpp
tasks/: ESEMPIO_USO.md  MIGRATION.md  QUICK_START.md  README.md  my_tasks.h  task_runner.cpp
